Fix(Style) Fixes helpText alignment issue

--- a/src/styles/unibase/forms/_helpText.sass
+++ b/src/styles/unibase/forms/_helpText.sass
@@ -56,3 +56,9 @@ label
         border-bottom-width: 0
         top: 100%
         left: calc(50% - .35rem)
+
+uni-checkbox-input
+    & + .helpTextToggle
+        top: .4rem
+        & + .helpText
+            bottom: calc(100% + .4rem)
